# pico-arkanoid

./: README.md
Task1/: README.md  run_project.sh
Task1/src/: arkanoid.c  balls.c
Task2/: README.md
Task2/src/: CMakeLists.txt  arkanoid.c  arkanoid_levels.c  balls.c
Task3/: README.md
Task3/src/: arkanoid.c  arkanoid_levels.c  balls.c
Task4/: README.md
Task4/src/: arkanoid.c  balls.c
Task5/: README.md
devel/src/: arkanoid.c  balls.c
src/: arkanoid.c  balls.c
